--- a/readme
+++ b/readme
@@ -1,5 +1,5 @@
-cl-tap-producerX (latest as of 20 Jan 2010)
------------------------------------------
+cl-tap-producerX (latest as of 26 Apr 2010)
+-------------------------------------------
 
   This work is licensed under the MIT (X11) License.
 
@@ -11,7 +11,7 @@ Dependencies
   This module has only been tested on GNU CLISP.
 
 Usage
-  cl-tap-producerX consists of two main subsystems: a test framework (unit-test-framework.lisp) and a set of utilities for exporting test results in the TAP format (cl-tap-producer.lisp). The file cl-tap-framework.lisp is provided for convenience and will load both into their own namespace as well as setting the TAP formatter as the default test formatter. The easiest way to get started with cl-tap-producerX is to load ASDF (for the dependency on split-sequence), then load cl-tap-framework.lisp.
+  cl-tap-producerX consists of two main subsystems: a test framework (unit-test-framework.lisp) and a set of utilities for exporting test results in the TAP format (cl-tap-producer.lisp). The file cl-tap-framework.lisp is provided for convenience and will load both into their own namespace as well as setting the TAP formatter as the default test formatter. The easiest way to get started with cl-tap-producerX is to load cl-tap-framework.lisp.
 
   There are two main ways of using cl-tap-producerX's unit test framework. One is to use deftest forms, as described in Practical Common Lisp. In this case, executing the test function will return a list of test result structures. Those test result structures can be passed to structured-test-list->tap to produce the TAP output as a string, or to print-test-list to print to standard output directly. Some additional testing facilities are provided beyond those described in Practical Common Lisp - please see unit-test-framework.lisp for the specific facilities available.
 
