--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+26 May 2010
+- Added is-condition for testing conditions.
+
+- Now uses MV-EQUIV 0.1.3 for comparisons by default.
+
 26 Apr 2010 (and earlier)
 - No longer loads split-sequence via ASDF - just loads the .lisp file directly.
 
