--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+18 Sep 2010
+- Fixed a bug that caused comparisons between nested vectors to be considered inequal.
+
 26 May 2010
 - Added is-condition for testing conditions.
 
