Updated readme with contact information.

--- a/readme
+++ b/readme
@@ -1,5 +1,9 @@
-cl-tap-producerX (latest as of 26 Apr 2010)
+cl-tap-producerX (latest as of 19 Apr 2011)
 -------------------------------------------
+
+Current Maintainer:
+  Brendon Robinson
+  brobinson9999@gmail.com
 
   This work is licensed under the MIT (X11) License.
   The latest code from this project should be available at:
